--- a/careers.html
+++ b/careers.html
@@ -124,10 +124,8 @@
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>In my 3 years here, I've grown alongside a team that's incredibly creative and dedicated to client success. Proud to be part of MediaX Fam!</h3>
-                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
-                                        genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p> -->
+                                    <h3>In my 3 years here, I've grown </h3>
+                                    <p>In my 3 years here, I've grown alongside a team that's incredibly creative and dedicated to client success. Proud to be part of MediaX Fam!</p>
 
                                     <h5>- Gauravi Dhingra </h5>
                                     <h6>(Account Manager)</h6>
@@ -143,10 +141,8 @@
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>Working at MediaX feels like being part of a family. The autonomy in decision-making, appreciation, invaluable exposure, and value for input, along with everything else, make it worth being a part of this company.</h3>
-                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
-                                        genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p> -->
+                                    <h3>Working at MediaX feels like being</h3>
+                                    <p>Working at MediaX feels like being part of a family. The autonomy in decision-making, appreciation, invaluable exposure, and value for input, along with everything else, make it worth being a part of this company.</p>
 
                                     <h5>- Vanshika Bhatia</h5>
                                     <h6>(Founder’s Office)</h6>
@@ -162,10 +158,8 @@
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>It has been so great working at MediaX with such hardworking, passionate people, always up for new learnings beyond their roles.</h3>
-                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
-                                        genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p> -->
+                                    <h3>It has been so great working at MediaX</h3>
+                                    <p>It has been so great working at MediaX with such hardworking, passionate people, always up for new learnings beyond their roles.</p>
 
                                     <h5>- Ayushi Guwalani</h5>
                                     <h6>(Account Manager)</h6>
@@ -181,12 +175,9 @@
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>From brainstorming sessions that crackle with energy to daily check-ins where everyone's voice is valued, MediaX fosters an environment where ideas are constantly evolving and improving. 
-                                         <!-- No matter your role, you're encouraged to contribute, and senior team members are always happy to mentor and guide. -->
+                                    <h3>From brainstorming sessions that crackle with energy
                                         </h3>
-                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
-                                        genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p> -->
+                                    <p>From brainstorming sessions that crackle with energy to daily check-ins where everyone's voice is valued, MediaX fosters an environment where ideas are constantly evolving and improving. No matter your role, you're encouraged to contribute, and senior team members are always happy to mentor and guide.</p>
 
                                     <h5>- Jaishika</h5>
                                     <h6>(HR)</h6>
@@ -202,11 +193,9 @@
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>At MediaX, I get all the creative freedom I could ask for, resulting in remarkable outcomes. The team's support is unparalleled—always ready to help. And the vibe... It's like a second home.
+                                    <h3>At MediaX, I get all the creative freedom
                                     </h3>
-                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
-                                        genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p> -->
+                                    <p>At MediaX, I get all the creative freedom I could ask for, resulting in remarkable outcomes. The team's support is unparalleled—always ready to help. And the vibe... It's like a second home.</p>
 
                                     <h5>- Sadaf Khan</h5>
                                     <h6>(Sr. UI/UX Designer)</h6>
