--- a/celebrations-by-anjili-case-study.html
+++ b/celebrations-by-anjili-case-study.html
@@ -55,8 +55,8 @@
                         <div class="cah-right">
                             <p>Project </p>
                             <div class="tag-box">
-                                <div class="tag">Website</div>
-                                <div class="tag">Branding</div>
+                                <div class="tag">Outreach & Marketing Solutions</div>
+                                <div class="tag">Website & Ar</div>
                             </div>
                         </div>
                     </div>
@@ -102,10 +102,7 @@
          <!-- Case Study Extra Images Section Start -->
         <section>
             <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/celebration/CBA 1.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 3.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 4.jpg" alt="" class="w-100"></div>
+                <div class="col-12 p-0"><img src="image/case-study/celebration/1.png" alt="" class="w-100"></div>
             </div>
         </section>
         <!-- Case Study Extra Images Section End -->
