--- a/mia-by-tanishq-case-study.html
+++ b/mia-by-tanishq-case-study.html
@@ -94,7 +94,7 @@
         <!-- Case Study About Section End -->
 
         <!-- Case Study visual-identity Section Start -->
-        <section class="case-visual-identity">
+        <!-- <section class="case-visual-identity">
             <div class="container-xxl">
                 <div class="row justify-content-between">
                     <div class="col-sm-8 col-md-6 col-lg-4 d-flex gap-2 gap-md-4 align-items-center">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Case Study visual-identity Section End -->
 
 
@@ -141,6 +141,14 @@
             </div>
             <div class="casw-video my-4">
                 <video src="image/case-study/mia/case-hero.mp4" autoplay loop muted class="w-100"></video>
+            </div>
+            <div class="container-xxl">
+                <div class="casw-text-bottom p-md-4">
+                        <div class="text-center">
+                            <h3 class="m-md-0">A total of <b class="red">46,839</b> actions were taken which includes likes, comments, tap-links, saves, shares etc.
+                            </h3>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Case Study Website Building Section End -->
