--- a/mrw-case-study.html
+++ b/mrw-case-study.html
@@ -55,8 +55,8 @@
                         <div class="cah-right">
                             <p>Project </p>
                             <div class="tag-box">
-                                <div class="tag">Website</div>
-                                <div class="tag">Social Media Management</div>
+                                <div class="tag">Website & AR</div>
+                                <div class="tag">Media Solutions</div>
                             </div>
                         </div>
                     </div>
