--- a/website-n-ar.html
+++ b/website-n-ar.html
@@ -52,26 +52,26 @@
                     <div class="col-md-5">
                         <div class="ssh-box">
                             <div class="ssh-slider">
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
                             </div>
                         </div>
                     </div>
