--- a/outside-of-home.html
+++ b/outside-of-home.html
@@ -52,26 +52,26 @@
                     <div class="col-md-5">
                         <div class="ssh-box">
                             <div class="ssh-slider">
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/ssh-img-1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/1.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/outside-of-home/2.png" alt=""></div>
                             </div>
                         </div>
                     </div>
